// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Page Blocks should match snapshot for AMP 1`] = `
.c0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Noto Sans Ethiopic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c3 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c2 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

.c1 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: "Noto Sans Ethiopic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 2.5rem 0;
  }
}

@media (min-width:63rem) {
  .c3 {
    margin-bottom: 2rem;
  }
}

@media (min-width:25rem) {
  .c2 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    <div>
      <h1
        class="c0"
        id="content"
        tabindex="-1"
      >
        ያድምጡ
      </h1>
      <p
        class="c1"
      >
        ዝግጅቶቻችንን’
      </p>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am/amp"
            title="Audio player"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="http://localhost:7080/images/amp_audio_placeholder.png"
              width="9"
            />
            <noscript />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`Radio Page Blocks should match snapshot for Canonical 1`] = `
.c0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Noto Sans Ethiopic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c3 {
  height: 165px;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c2 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

.c1 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: "Noto Sans Ethiopic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c4 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 2.5rem 0;
  }
}

@media (min-width:63rem) {
  .c3 {
    margin-bottom: 2rem;
  }
}

@media (min-width:25rem) {
  .c2 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<div>
  <h1
    class="c0"
    id="content"
    tabindex="-1"
  >
    ያድምጡ
  </h1>
  <p
    class="c1"
  >
    ዝግጅቶቻችንን’
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowfullscreen=""
        class="c4"
        scrolling="no"
        src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am"
        title="Audio player"
      />
      <noscript />
    </div>
  </div>
</div>
`;
